# viet-intent-engine

./: .gitignore  CMakeLists.txt  README.md  convitcon2x  convitcon2x.pub  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  format.yml
examples/: benchmark.py  demo_chatbot.py  python_example.py
include/: intent_detector.h  text_preprocessor.h  viet_intent.h
models/: intents.json  train_data.json
python/: __init__.py  setup.py  setup_simple.py  train_model.py  viet_intent_py.cpp
src/: intent_detector.cpp  text_preprocessor.cpp  viet_intent.cpp
