[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "viet-intent-engine"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Vietnamese Intent Detection Engine - Offline, C++ with Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
]
keywords = ["vietnamese", "nlp", "intent-detection", "chatbot", "offline"]
dependencies = [
    "pybind11>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "numpy>=1.19.0",
    "black>=23.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/viet-intent-engine"
Bug Tracker = "https://github.com/yourusername/viet-intent-engine/issues"
Documentation = "https://github.com/yourusername/viet-intent-engine#readme"
